added footer and img

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header>
     <div class="head-container">
       <div class="logo-container">
-        <img src="logo/logo/logo.png" alt="Companies logo">
+        <img src="img/logo.png" alt="Companies logo">
         <h2 class="logo-h2">tajam</h2>
       </div>
       <div class="nav-container">
@@ -50,7 +50,7 @@
     <!--*************************SECTION-1***************************-->
     <div class="ourstory">
 
-      <img class="logo-ourstory" src="logo/logo/logo-big.png">
+      <img class="logo-ourstory" src="img/logo-big.png">
 
       <h1 class="ourstory-h1">OUR STORY</h1>
       <p class="text-ourstory">
@@ -78,7 +78,7 @@
 
     <div class="section-2-container">
       <div class="logo-story-container">
-        <img src="logo/logo/play.png" alt="play-logo">
+        <img src="img/play.png" alt="play-logo">
         <h2 class="play-logo-h2">WATCH OUR STORY</h2>
       </div>
     </div>
@@ -112,19 +112,19 @@
         <div class="sec-3-container">
           <div class="sec-3-row">
             <div class="sec-3-col">
-              <img class="sec-3-img" src="logo/logo/screen.png" alt="animated computer screen">
+              <img class="sec-3-img" src="img/screen.png" alt="animated computer screen">
               <h4 class="sec-3-h4">WEB DESIGN & DEVELOPMENT</h4>
               <p class="sec-3-display-p sec-3-p-3">This is Photoshop's version of Lorem Ipsum. Prion gravida nibh vel
                 velit auctor aliquet Aenean.</p>
             </div>
             <div class="sec-3-col col-class-three">
-              <img class="sec-3-img" src="logo/logo/pen.png" alt="animated paint brush">
+              <img class="sec-3-img" src="img/pen.png" alt="animated paint brush">
               <h4 class="sec-3-h4">BRANDING IDENTITY</h4>
               <p class="sec-3-display-p">This is Photoshop's version of Lorem Ipsum. Prion gravida nibh vel velit auctor
                 aliquet Aenean.</p>
             </div>
             <div class="sec-3-col">
-              <img class="sec-3-img" src="logo/logo/mobile.png" alt="animated computer screen">
+              <img class="sec-3-img" src="img/mobile.png" alt="animated computer screen">
               <h4 class="sec-3-h4">WEB DESIGN & DEVELOPMENT</h4>
               <p class="sec-3-display-p">This is Photoshop's version of Lorem Ipsum. Prion gravida nibh vel velit auctor
                 aliquet Aenean.</p>
@@ -142,19 +142,19 @@
         <div class="sec-3-2-container">
           <div class="sec-3-2-row">
             <div class="sec-3-2-col">
-              <img class="sec-3-2-img" src="logo/logo/graph.png" alt="animated graph">
+              <img class="sec-3-2-img" src="img/graph.png" alt="animated graph">
               <h4 class="sec-3-2-h4">SEARCH ENGINE OPTIMIZATION</h4>
               <p class="sec-3-2-display-p">This is Photoshop's version of Lorem Ipsum. Prion gravida nibh vel velit
                 auctor aliquet Aenean.</p>
             </div>
             <div class="sec-3-2-col col-class-3">
-              <img class="sec-3-2-img" src="logo/logo/gameboy.png" alt="animated gameboy device">
+              <img class="sec-3-2-img" src="img/gameboy.png" alt="animated gameboy device">
               <h4 class="sec-3-2-h4">GAME DEVELOPMENT</h4>
               <p class="sec-3-2-display-p">This is Photoshop's version of Lorem Ipsum. Prion gravida nibh vel velit
                 auctor aliquet Aenean.</p>
             </div>
             <div class="sec-3-2-col">
-              <img class="sec-3-2-img" src="logo/logo/heart.png" alt="animated heart">
+              <img class="sec-3-2-img" src="img/heart.png" alt="animated heart">
               <h4 class="sec-3-2-h4">MADE WITH LOVE</h4>
               <p class="sec-3-2-display-p">This is Photoshop's version of Lorem Ipsum. Prion gravida nibh vel velit
                 auctor aliquet Aenean.</p>
@@ -260,18 +260,18 @@
             </div>
           <div>
              <h3 class="sec-6-h3">OUR HAPPY CLIENTS</h3>
-             <img class="sec-six-img" src="logo/logo/1280px-Barneys_New_York_Logo.png" alt="" height="45px" width="100px">
-             <img class="sec-six-img" src="logo/logo/1280px-Gucci_Logo.png" alt="" height="40px" width="90px">
-             <img class="sec-six-img" src="logo/logo/1280px-Levi's_logo.png" alt="" height="45px" width="90px">
-             <img class="sec-six-img" src="logo/logo/1280px-Logo_NIKE.png" alt="" height="35px" width="90px">
-             <img class="sec-six-img" src="logo/logo/Billabong.png" alt="" height="40px" width="90px">
+             <img class="sec-six-img" src="img/1280px-Barneys_New_York_Logo.png" alt="" height="45px" width="100px">
+             <img class="sec-six-img" src="img/1280px-Gucci_Logo.png" alt="" height="40px" width="90px">
+             <img class="sec-six-img" src="img/1280px-Levi's_logo.png" alt="" height="45px" width="90px">
+             <img class="sec-six-img" src="img/1280px-Logo_NIKE.png" alt="" height="35px" width="90px">
+             <img class="sec-six-img" src="img/Billabong.png" alt="" height="40px" width="90px">
          </div>
          <div>
-             <img class="sec-six-img" src="logo/logo/Calvin_klein_logo.png" alt="" height="40px" width="120px">
-             <img class="sec-six-img" src="logo/logo/Converse_logo.png" alt="" height="40px" width="100px">
-             <img class="sec-six-img" src="logo/logo/Logo_of_Mango_(new).png" alt="" height="38px" width="100px">
-             <img class="sec-six-img" src="logo/logo/Puma_Logo.png" alt="" height="50px" width="80px">
-             <img class="sec-six-img" src="logo/logo/Zara_Logo.png" alt="" height="30px" width="100px">
+             <img class="sec-six-img" src="img/Calvin_klein_logo.png" alt="" height="40px" width="120px">
+             <img class="sec-six-img" src="img/Converse_logo.png" alt="" height="40px" width="100px">
+             <img class="sec-six-img" src="img/Logo_of_Mango_(new).png" alt="" height="38px" width="100px">
+             <img class="sec-six-img" src="img/Puma_Logo.png" alt="" height="50px" width="80px">
+             <img class="sec-six-img" src="img/Zara_Logo.png" alt="" height="30px" width="100px">
          </div>
       </div>
   </section>
@@ -288,7 +288,7 @@
       <div class="footer-wrapper">
         <div class="footer-sec">
           <div class="footer-div-1-flex">
-          <img class="footer-logo" src="logo/logo/logo.png" alt="">
+          <img class="footer-logo" src="img/logo.png" alt="">
         <h3 class="footer-h3-1">tajam</h3>
       </div>
         <p class="footer-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet ut molestias quod excepturi veniam tenetur Yay for programming.</p>
@@ -303,13 +303,13 @@
       <div class="footer-sec">
         <h3 class="footer-h3-2">OUR STUDIO</h3>
         <div class="footer-div-2-flex">
-        <img src="logo/logo/big104.png" alt="" height="20px" width="15px">
+        <img src="img/big104.png" alt="" height="20px" width="15px">
         <p class="footer-p">Ruko cucruk, Jl. Radio luar dalem jos
         No.12 - 13,Kalideres - Jakarta Barat
         11480 - Indonesia</p>
       </div>
       <div class="footer-div-3-flex">
-        <img src="logo/logo/phone351.png" alt="">
+        <img src="img/phone351.png" alt="">
         <p class="footer-p">(+62) 21-2224 3333</p>
       </div>
       </div>
@@ -326,18 +326,18 @@
           <div class="sub-container">
             <h3 class="sub-h4">Stay In Touch</h3>
             <input type="type" id="footer-submit" value="Subscribe to our Newsletter">
-            <a class="paper" href=""><img src="logo/logo/paper122.png" alt="" width="20px" height="20px"></a>
+            <a class="paper" href=""><img src="img/paper122.png" alt="" width="20px" height="20px"></a>
           </div>
         </form>
 
   
       <div>
-      <img a href="#" src="logo/logo/facebook.png" alt=""></a>
-      <img src="logo/logo/twitter.png" alt="">
-      <img src="logo/logo/dribbble.png" alt="">
-      <img src="logo/logo/instagram.png" alt="">
-      <img src="logo/logo/gplus.png" alt="">
-      <img src="logo/logo/youtube.png" alt="">
+      <img a href="#" src="img/facebook.png" alt=""></a>
+      <img src="img/twitter.png" alt="">
+      <img src="img/dribbble.png" alt="">
+      <img src="img/instagram.png" alt="">
+      <img src="img/gplus.png" alt="">
+      <img src="img/youtube.png" alt="">
       </div>
       </div>
     </div>
