finishing touch ups

--- a/index.html
+++ b/index.html
@@ -229,9 +229,11 @@
               <p class="box-p">MARKETING</p>
               </div>
             </a>
-            </div>
-          </div>
+            </div>  
+          </div>  
         </div>
+        <p class="sect-5-p-2">Become part of our deam team, let's join us!</p>
+            <a class="sec-5-a" href="#">WE ARE HIRING</a>
         </div>
       </div>
     </div>
