added style to footer and hover effect

--- a/index.html
+++ b/index.html
@@ -334,12 +334,12 @@
 
   
       <div>
-      <img a href="#" src="img/facebook.png" alt=""></a>
-      <img src="img/twitter.png" alt="">
-      <img src="img/dribbble.png" alt="">
-      <img src="img/instagram.png" alt="">
-      <img src="img/gplus.png" alt="">
-      <img src="img/youtube.png" alt="">
+      <img class="site-hov" a href="#" src="img/facebook.png" alt=""></a>
+      <img class="site-hov" src="img/twitter.png" alt="">
+      <img class="site-hov" src="img/dribbble.png" alt="">
+      <img class="site-hov" src="img/instagram.png" alt="">
+      <img class="site-hov" src="img/gplus.png" alt="">
+      <img class="site-hov" src="img/youtube.png" alt="">
       </div>
       </div>
     </div>
