added img and style to footer and header

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                   <input type="text" id="name" name="name" placeholder="Name">
                   <input type="text" id="email" name="email" placeholder="Email">
                   <input type="text" id="subject" name="subject" placeholder="Subject">
-                  <textarea id="massage" name="massage" placeholder="Your Massage" style="height: 150px;"></textarea>
+                  <textarea id="massage" name="message" placeholder="Your Massage" style="height: 150px;"></textarea>
                   <input type="submit" id="submit" value="Submit">
                 </form>
             </div>
@@ -265,7 +265,7 @@
              <img class="sec-six-img" src="img/1280px-Barneys_New_York_Logo.png" alt="" height="45px" width="120px">
              <img class="sec-six-img" src="img/1280px-Gucci_Logo.png" alt="" height="40px" width="120px">
              <img class="sec-six-img" src="img/1280px-Levi's_logo.png" alt="" height="45px" width="120px">
-             <img class="sec-six-img" src="img/1280px-Logo_NIKE.png" alt="" height="35px" width="120px">
+             <img class="sec-six-img" src="img/1280px-Logo_NIKE.png" alt="" height="35px" width="125px">
              <img class="sec-six-img" src="img/Billabong.png" alt="" height="45px" width="110px">
          </div>
          <div>
@@ -326,7 +326,7 @@
       <div class="footer-sec">
         <form class="footer-subscribe" action="type">
           <div class="sub-container">
-            <h3 class="sub-h4">Stay In Touch</h3>
+            <h3 class="sub-h4">STAY IN TOUCH</h3>
             <input type="type" id="footer-submit" value="Subscribe to our Newsletter">
             <a class="paper" href=""><img src="img/paper122.png" alt="" width="20px" height="20px"></a>
           </div>
